<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MarsRover" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WQ2-nK-Nzo">
                                <rect key="frame" x="0.0" y="152" width="375" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="CommandsTextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zR8-dw-K0d"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yg7-pX-3Er">
                                <rect key="frame" x="157" y="323" width="61" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="PositionLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wim-ja-qh0">
                                <rect key="frame" x="147.5" y="486.5" width="81" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ExecuteButton"/>
                                <state key="normal" title="Move Rover"/>
                                <connections>
                                    <action selector="moveRoverButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uyq-Pa-nNR"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Wim-ja-qh0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PpO-BB-7kF"/>
                            <constraint firstItem="Wim-ja-qh0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="1.5" constant="1" id="XoZ-7H-kZ9"/>
                            <constraint firstItem="WQ2-nK-Nzo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.5" id="bhX-2B-kZW"/>
                            <constraint firstItem="WQ2-nK-Nzo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d3o-IT-z1R"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WQ2-nK-Nzo" secondAttribute="trailing" id="jbI-x4-d6G"/>
                            <constraint firstItem="yg7-pX-3Er" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="khq-fO-vwL"/>
                            <constraint firstItem="yg7-pX-3Er" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rEl-KI-8k8"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="commandsTextField" destination="WQ2-nK-Nzo" id="5cQ-hH-Zvv"/>
                        <outlet property="positionLabel" destination="yg7-pX-3Er" id="7d7-2I-ZuM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
